--- a/footer.html
+++ b/footer.html
@@ -5,6 +5,7 @@
       <input type="text" class="msg-input" id="message"
         placeholder="メッセージ or ダイス (Enterで送信)">
       <input type="submit" class="button" style="padding:10px" onclick="sendMessage();" value="送信" />
+      <input type="checkbox" id="audio" checked> 効果音
     </form>
     <div id="msg-list" style="height:100%; overflow:auto;"></div>
   </div>
