--- a/footer.html
+++ b/footer.html
@@ -2,8 +2,8 @@
     <form action="" method="post" id="message-form" onsubmit="return false;">
       <input type="text" class="text-input" id="author" placeholder="キャラ名">
       <input type="text" class="text-input" id="color" placeholder="カラーコード">
-      <input type="text" class="msg-input" id="message"
-        placeholder="メッセージ or ダイス (Enterで送信)">
+      <textarea type="text" class="msg-input" id="message"
+        placeholder="メッセージ or ダイス (Enterで送信)"></textarea>
       <input type="submit" class="button" style="padding:10px" onclick="sendMessage();" value="送信" />
       <input type="checkbox" id="audio" checked> 効果音
     </form>
