add name command

--- a/footer.html
+++ b/footer.html
@@ -1,6 +1,6 @@
   <div id="wrapper">
     <form action="" method="post" id="message-form" onsubmit="return false;">
-      <input type="text" class="text-input" id="author" placeholder="キャラ名">
+      <input type="text" class="text-input" id="author" placeholder="発言者">
       <input type="text" class="text-input" id="color" placeholder="カラーコード">
       <textarea type="text" class="msg-input" id="message"
         placeholder="メッセージ or ダイス (Enterで送信)"></textarea>
